# Freenove_4WD_Smart_Car_Kit_for_Raspberry_Pi

./: README.md
cpp_client/: CMakeLists.txt  main.cpp  powerThread.cpp  recvThread.cpp  vidThread.cpp
